# motor-owa-v2

./: README.md  pyproject.toml  requirements.txt
crisp_dm/: 01_comprension_negocio.md  02_comprension_datos.md  03_preparacion_datos.md  04_modelado.md  05_evaluacion.md  06_despliegue.md
results/: backtest_registros.csv  carteras_por_perfil.csv  coherencia.csv  metricas_por_perfil.csv
scripts/: run_demo.py
src/motor_owa/: __init__.py  adaptive.py  config.py  criteria.py  data.py  elicitation.py  engine.py  latent.py  owa.py  portfolio.py  profiles.py  quantifiers.py  validation.py  viz.py
tests/: test_adaptive.py  test_elicitation.py  test_engine.py  test_latent.py  test_portfolio.py  test_profiles.py  test_quantifiers.py  test_validation.py
