[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "motor-owa-v2"
version = "2.0.0"
description = "Motor adaptativo de recomendacion de portafolios (OWA + perfiles conductuales), v2 CRISP-DM"
authors = [{name = "Diego Quintero-Avellaneda", email = "diego.fqa@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pandas>=2.0", "matplotlib>=3.7"]

[project.optional-dependencies]
data = ["yfinance>=0.2"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
